@@ -7,6 +7,7 @@ New features:
 Bug fixes:
 ~~~~~~~~~~
 - #1143 added RSS box from CPSRSS
+- box types were not getting installed
 New internal features:
 ~~~~~~~~~~~~~~~~~~~~~~
 - ContentBox use the new CPSDefault.utils getFolderContents/filterContents
